# python-log-analyzer

./: .gitignore  CHANGELOG.md  README.md  example4.json  loganalyzer.py  noxfile.py  pyproject.toml  pytest.ini
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: docs.yml  python-package.yml
docs/: conf.py  index.rst  loganalyzer.rst
loganalyzer/: __init__.py  __main__.py  cli.py  filters.py  reader.py  reports.py
tests/: test_filters.py  test_main.py  test_reader.py  test_reports.py
